--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
     </repositories>
 
     <dependencies>
-        <!--Server API-->
+        <!--Server API for Paper Timings API-->
         <dependency>
             <groupId>com.destroystokyo.paper</groupId>
             <artifactId>paper-api</artifactId>
@@ -94,6 +94,7 @@
             </exclusions>
         </dependency>
 
+        <!--Server API for Spigot-->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
@@ -108,6 +109,14 @@
             <version>3.4.3</version>
         </dependency>
 
+        <!--Logging API required by oshi-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+        <!--MySQL driver that is included in Spigot-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -115,8 +124,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--Netty work library of Minecraft
-        This is added to read the amount of bytes which are sent or received-->
+        <!--Netty work library of Minecraft - This is added to read the amount of bytes which are sent or received-->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
@@ -124,6 +132,7 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--Unit testing in Java-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -131,16 +140,11 @@
             <scope>test</scope>
         </dependency>
 
+        <!--Mocking library-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>2.13.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
