--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,17 @@
                             <pattern>oshi</pattern>
                             <shadedPattern>lagmonitor.oshi</shadedPattern>
                         </relocation>
+                        <relocation>
+                            <pattern>org.slf4j</pattern>
+                            <shadedPattern>lagmonitor.slf4j</shadedPattern>
+                        </relocation>
                     </relocations>
+                    <artifactSet>
+                        <excludes>
+                            <!-- Exclude native drivers by default for user security reasons -->
+                            <exclude>net.java.dev.jna:jna</exclude>
+                        </excludes>
+                    </artifactSet>
                 </configuration>
                 <executions>
                     <execution>
