--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>LagMonitor</name>
-    <version>1.17</version>
+    <version>1.17.1-SNAPSHOT</version>
 
     <url>https://dev.bukkit.org/bukkit-plugins/LagMonitor/</url>
     <description>
@@ -115,6 +115,7 @@
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
+            <!--Use an old version to synchronize JNA 4.3 with the version in Paper -->
             <version>3.4.3</version>
         </dependency>
 
@@ -153,7 +154,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.13.0</version>
+            <version>2.17.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
