Don't transform this plugin because it's already compatible with 1.13

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,7 +11,8 @@ description: |
 website: ${project.url}
 dev-url: ${project.url}
 
-softdepend: [PacketListenerApi]
+# This plugin don't have to be transformed for compatibility with Minecraft >= 1.13
+api-version: 1.13
 
 commands:
     lagmonitor:
