--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -46,6 +46,7 @@ monitor-database: false
 host: 127.0.0.1
 port: 3306
 database: lagmonitor
+usessl: false
 username: myUser
 password: myPassword
 tablePrefix: 'lgm_'
