--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
   skip_cleanup: true
   local_dir: test_builds/  # or remove this line to upload from root of repo
   file: LagMonitor.jar
-  github_token: 9bo85zYRTj6GGI3QQyx9TQ # Set in travis-ci.org dashboard
+  github_token: 8ddb1f454f4aebb749c83f75591e00dc55b20428 # Set in travis-ci.org dashboard
   on:
     branch: master
