--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
                             <shadedPattern>lagmonitor.oshi</shadedPattern>
                         </relocation>
                         <relocation>
+                            <pattern>oshi.demo</pattern>
+                            <shadedPattern>lagmonitor.oshi.demo</shadedPattern>
+                        </relocation>
+                        <relocation>
                             <pattern>org.slf4j</pattern>
                             <shadedPattern>lagmonitor.slf4j</shadedPattern>
                         </relocation>
