--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
+        <junit.jupiter.version>5.5.2</junit.jupiter.version>
     </properties>
 
     <build>
@@ -49,7 +51,7 @@
                         <excludes>
                             <!-- Exclude native drivers by default for user security reasons -->
                             <exclude>net.java.dev.jna:jna</exclude>
-<!--                            Already included in demo-->
+                            <!--                            Already included in demo-->
                             <exclude>com.github.oshi:oshi-core</exclude>
                         </excludes>
                     </artifactSet>
@@ -80,6 +82,13 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Testing plugin-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
             </plugin>
         </plugins>
 
@@ -161,20 +170,33 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--Unit testing in Java-->
+        <!--JUnit 5-->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
 
         <!--Mocking library-->
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>2.27.0</version>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>3.0.0</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>2.2</version>
         </dependency>
     </dependencies>
 </project>
