--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,7 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <version>2.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
