--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.games647</groupId>
@@ -21,7 +21,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <junit.jupiter.version>5.5.2</junit.jupiter.version>
+        <junit.jupiter.version>5.6.0</junit.jupiter.version>
     </properties>
 
     <build>
@@ -34,7 +34,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.2.2</version>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                     <relocations>
@@ -143,7 +143,7 @@
             <groupId>com.github.oshi</groupId>
             <!--  demo includes the normal version too          -->
             <artifactId>oshi-demo</artifactId>
-            <version>4.3.0</version>
+            <version>4.4.0</version>
             <!-- Excludes the libraries below, because we only need the DetectVm class which has no dependencies on
             the libraries below-->
             <exclusions>
@@ -158,15 +158,15 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.44</version>
+            <version>5.1.48</version>
             <scope>provided</scope>
         </dependency>
 
         <!--Netty work library of Minecraft - This is added to read the amount of bytes which are sent or received-->
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.25.Final</version>
+            <artifactId>netty-codec</artifactId>
+            <version>4.1.45.Final</version>
             <scope>provided</scope>
         </dependency>
 
@@ -189,7 +189,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.0.0</version>
+            <version>3.2.4</version>
             <scope>test</scope>
         </dependency>
 
