--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,13 +6,16 @@
 # or other issues.
 thread-safety-check: true
 
-# Check periodically if a server (especially a plugin) is doing block I/O operations on the main Thread.
-# Operations like SQL-, HTTP-Request, File or Socket-Connections should be performed in a separate Thread.
+# Check periodically if a server (especially a plugin) is doing block I/O operations on the main thread.
+# Operations like SQL-, HTTP-Request, File or Socket-Connections should be performed in a separate thread.
 # If this is not the case, the server will wait for the response and therefore causes lags.
+#
+# This can be useful for plugins that use thread pools, where the connection is initialized in background, but the
+# data is retrieved on the main thread (e.g. Hikari SQL database pools). The following options can't detect that.
 thread-block-detection: false
 
 # This does the same as the option above, but it proves better performance. This means it can only check for
-# Socket connections -> HTTP, SQL, but not for file operations
+# Socket connections -> HTTP, SQL, but not for file operations.
 socket-block-detection: true
 
 # This is a more efficient system as the method above (thread-block detection)
