--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -22,7 +22,7 @@ socket-block-detection: true
 # By setting a new security manager we can receive the operations above as events and don't have
 # to check it periodically.
 # Warning: this may override the existing security manager which could be set by your hoster
-securityMangerBlockingCheck: false
+securityMangerBlockingCheck: true
 
 # If you see something like: "Server is performing a threading socket connection ..." and then a long list with "at .."
 # It's properly one of the four features above. The last part is the stacktrace.
