--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,7 @@ updates:
 - package-ecosystem: maven
   directory: "/"
   schedule:
-    interval: weekly
-    time: "16:00"
-    timezone: Etc/Universal
+    interval: monthly
   open-pull-requests-limit: 10
   ignore:
   - dependency-name: com.github.oshi:oshi-demo
