--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,6 +14,9 @@ dev-url: ${project.url}
 # This plugin don't have to be transformed for compatibility with Minecraft >= 1.13
 api-version: 1.13
 
+libraries:
+    - net.java.dev.jna:jna:5.8.0
+
 commands:
     lagmonitor:
         description: 'Gets displays the help page of all lagmonitor commands'
