--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>LagMonitor</name>
-    <version>1.17.2</version>
+    <version>1.17.3</version>
 
     <url>https://dev.bukkit.org/bukkit-plugins/LagMonitor/</url>
     <description>
@@ -22,6 +22,7 @@
         <maven.compiler.target>10</maven.compiler.target>
         <maven.compiler.release>10</maven.compiler.release>
 
+        <!-- 5.7.5 uses JNA 5.12.1, so this needs to adjusted in the plugin.yml -->
         <junit.jupiter.version>5.9.0</junit.jupiter.version>
         <oshi.version>6.4.0</oshi.version>
     </properties>
@@ -128,16 +129,16 @@
         <!--Paper repository-->
         <repository>
             <id>paper-repo</id>
-            <url>https://repo.destroystokyo.com/repository/maven-public/</url>
+            <url>https://repo.papermc.io/repository/maven-snapshots/</url>
         </repository>
     </repositories>
 
     <dependencies>
         <!--Server API for Paper Timings API-->
         <dependency>
-            <groupId>com.destroystokyo.paper</groupId>
+            <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.16.5-R0.1-SNAPSHOT</version>
+            <version>1.19-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -178,7 +179,6 @@
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
-            <!-- 5.7.5 uses JNA 5.8, so this needs to adjusted in the plugin.yml -->
             <version>${oshi.version}</version>
         </dependency>
 
