Exclude SLF4J API upgrade from paper
This prevents shading the newer dependency in comparison to the required older version.

This fixes #172

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
             <artifactId>paper-api</artifactId>
             <version>1.19-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--Server API for Spigot-->
